--- a/2024SW-HCI/index.html
+++ b/2024SW-HCI/index.html
@@ -5,27 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Biblioteca</title>
     <link rel="stylesheet" href="./style.css">
+     <!-- PapaParse Library -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+     <!-- Custom Script -->
+     <script defer src="./script.js"></script>
+   
 </head>
 <body>
     <header class="header-container">
-        
         <div class="header-content">
-            <nav class="nav-menu">
-                <a href="#">INICIO</a>
-                <a href="libro.html">LIBROS</a>
-                <a href="autor.html">AUTORES</a>
-                <a href="contact.html">CONTACTO</a>
-            </nav>
             <div class="logo-container">
                 <h1>EPN <span>Biblioteca</span></h1>
                 <p>"Un buen libro es una voz sabia junto a ti" </p>
                 <p>Abel Pérez Rojas</p>
             </div>
+            <nav class="nav-menu">
+                <a href="#">INICIO</a>
+                <a href="repositorio.html">REPOSITORIO DIGITAL</a>
+                <a href="contact.html">CONTACTOS</a>
+            </nav>
         </div>
         <div class="search-bar">
-            <input type="text" placeholder="Buscar un libro, autor, artículo o tema">
-            <button>Buscar</button>
-            <button>Accesos directos</button>
+            <input type="text" id="search-input" placeholder="Buscar un libro, autor, artículo o tema">
+            <button id="search-button">Buscar</button>
         </div>
     </header>
 
@@ -41,17 +43,42 @@
             </ul>
         </div>
         <div class="info-image">
-            <img src="assets/images1.jpg" alt="Imagen de la biblioteca">
+            <img src="assets/Inicio.png" alt="Imagen de la biblioteca">
         </div>
     </section>
 
     <footer>
-        <blockquote>
-            <p>"So much great information!"</p>
-            <cite>– Vegar Moen</cite>
-        </blockquote>
+        <div class="footer-content">
+            <div class="footer-section left">
+                <ul>
+                    <li><a href="#">Legal Warning</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Cookies Policy</a></li>
+                </ul>
+            </div>
+            <div class="footer-section center">
+                <div class="footer-logo">
+                    <h2>EPN Biblioteca</h2>
+                </div>
+                <div class="social-icons">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+            <div class="footer-section right">
+                <ul>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">FAQs</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>EPN Biblioteca | Quito, Ecuador | info@epn.edu.ec | +593 2 297 6300</p>
+        </div>
     </footer>
-    
-
 </body>
 </html>
